Refactor applicant decision notifications; introduce ApprovalNotificationDTO, update email service to use new notification structure, and enhance ApplicantService to create in-app notifications for applicants and admins.